serviceA/deployments.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: servicea
    service: servicea
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: servicea
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: servicea
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicea
      version: v1
  template:
    metadata:
      labels:
        app: servicea
        version: v1
    spec:
      serviceAccountName: sa-servicea
      containers:
      - name: containera
        image: esparta2018/servicea:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        securityContext:
          runAsUser: 1000
        resources:
          requests:
            memory: "100Mi"
            cpu: 200m
          limits:
            memory: "200Mi"
            cpu: 250m

---

apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: serviceb
    service: serviceb
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: serviceb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  labels:
    app: serviceb
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serviceb
      version: v1
  template:
    metadata:
      labels:
        app: serviceb
        version: v1
    spec:
      serviceAccountName: sa-serviceb
      containers:
      - name: containerb
        image: esparta2018/serviceb:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        securityContext:
          runAsUser: 1000
        resources:
          requests:
            memory: "100Mi"
            cpu: 200m
          limits:
            memory: "200Mi"
            cpu: 250m

---

apiVersion: v1
kind: Service
metadata:
  name: service-c
  labels:
    app: servicec
    service: servicec
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: servicec
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
  labels:
    app: servicec
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicec
      version: v1
  template:
    metadata:
      labels:
        app: servicec
        version: v1
    spec:
      serviceAccountName: sa-servicec
      containers:
      - name: containerc
        image: esparta2018/servicec:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        securityContext:
          runAsUser: 1000
        resources:
          requests:
            memory: "100Mi"
            cpu: 200m
          limits:
            memory: "200Mi"
            cpu: 250m
