serviceA/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service
spec:
  hosts:
  - "*"
  gateways:
  - service-gateway
  http:
  - match:
    - uri:
        prefix: /servicea
    route:
    - destination:
        host: service-a
        port:
          number: 3000
  - match:
    - uri:
        prefix: /serviceb
    route:
    - destination:
        host: service-b
        port:
          number: 3000
  - match:
    - uri:
        prefix: /servicec
    route:
    - destination:
        host: service-c
        port:
          number: 3000
